--- a/_quarto.yml
+++ b/_quarto.yml
@@ -14,6 +14,7 @@ website:
       - section: "Campaign"
         contents:
           - index.qmd
+          - campaign/encounters.qmd
       - section: "Rules"
         contents:
           - rules/abilities.qmd
