--- a/_quarto.yml
+++ b/_quarto.yml
@@ -15,6 +15,8 @@ website:
         contents:
           - phandalin/overview.qmd
           - phandalin/town.qmd
+          - phandalin/goblin_arrows.qmd
+          - phandalin/cragmaw_hideout.qmd
       - section: "Campaign"
         contents:
           - index.qmd
